# elemental-analysis

./: .gitignore  README.md  properties.csv  properties.html  pyproject.toml  requirements.txt  visualization.ipynb
elemental_analysis/: visualization.py
