[tool.poetry]
name = "elemental-analysis"
version = "0.1.0"
description = ""
authors = ["Daniel Gafni <danielgafni16@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.0"
plotly = "^4.14.3"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
